err/robotframework-mongodblibrary.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MongoDBLibrary'...
Compiling './lib/python3.5/site-packages/MongoDBLibrary/mongo_connection_manager.py'...
***   File "./lib/python3.5/site-packages/MongoDBLibrary/mongo_connection_manager.py", line 40
    print "| Connect To MondoDB | dbHost | dbPort | dbMaxPoolSize | dbNetworktimeout | dbDocClass | dbTZAware |"
                                                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/MongoDBLibrary/mongoquery.py'...
***   File "./lib/python3.5/site-packages/MongoDBLibrary/mongoquery.py", line 22
    print "| @{allDBs} | Get Mongodb Databases |"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/robotframework_mongodblibrary-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
